updated hibernate to 3.5 series added functionality to show stories added / deleted in iteration
git-svn-id: http://agilefant.googlecode.com/svn/trunk@4207 29784df9-99d5-7e28-3e6c-ac1830307ffc